# ioh-robodog-rtsp

./: CMakeLists.txt  README.md  config.yaml  go2rtc.yaml
scripts/: setup_jetson.sh  start.sh
src/: config.cpp  config.hpp  encoder.cpp  encoder.hpp  main.cpp  pipeline.cpp  pipeline.hpp  stats.cpp  stats.hpp
